# nvim

./: .gitignore  INSTALLATION.md  README.md  init.lua  lazyvim.json
Docs/: .clang-format  .clang-tidy  cpp-core.md  misc.md  modernize.md  performance.md  readability.md
cmake/: clean.bat
cmake/kits/msvs/debug/: generate.bat
cmake/kits/msvs/release/: build.bat  generate.bat
cmake/kits/ninja-msvs/debug/: build.bat  generate.bat
cmake/kits/ninja-msvs/release/: build.bat  generate.bat
cmake/kits/ninja/debug/: build.bat  generate.bat
cmake/kits/ninja/release/: build.bat  generate.bat
compile-tools/: cmake.json
lua/config/: autocmds.lua  keymaps.lua  lazy.lua  neovide.lua  options.lua
lua/plugins/: blink.lua  colorscheme.lua  dashboard.lua  debugger.lua  disabled.lua  snacks.lua  toggleterm.lua
lua/scripts/: init.lua
lua/scripts/cmake/: cmake-json.lua  cmake-syntax.lua  cmake-terminal.lua  cmake.lua  init.lua
lua/scripts/compile-tools/: async.lua  init.lua  job.lua  terminal.lua
lua/scripts/compile-tools/compilers/: cmake.lua  module.md  vs-solution.lua
lua/scripts/template/: template.lua
templates/: makefile
templates/c-lang/: clang-format.tpl  clang-tidy.tpl  cpp_run.bat  h.tpl
templates/cmake/: CMakeLists.txt
